@@ -33,7 +33,8 @@ use namespace::autoclean;
 has filename => (is => 'ro', isa => 'Str', required => 1);
 
 sub add_routes_to {
-  my ($self, $router) = @_;
+  my ($self, $router, $arg) = @_;
+  $arg ||= {};
 
   my $file = $self->filename;
 
@@ -46,8 +47,11 @@ sub add_routes_to {
              map  { chomp; s/#.*\z//r } <$fh>
   }
 
-  my $curr;
+  my $add_method = $arg->{ignore_conflicts}
+                 ? 'add_route_unless_exists'
+                 : 'add_route';
 
+  my $curr;
   for my $i (0 .. $#lines) {
     my $line = $lines[$i];
 
@@ -69,7 +73,7 @@ sub add_routes_to {
     }
 
     if ($curr and ($i == $#lines or $lines[ $i + 1 ] =~ /^\S/)) {
-      $router->add_route( Router::Dumb::Route->new($curr) );
+      $router->$add_method( Router::Dumb::Route->new($curr) );
       undef $curr;
     }
   }
